--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,16 +11,16 @@
 		"jsx": "react",
 		"moduleResolution": "node",
 		"rootDir": "src",
-		"allowSyntheticDefaultImports":true,
+		"allowSyntheticDefaultImports": true,
 		"forceConsistentCasingInFileNames": true,
 		"noImplicitReturns": true,
 		"noImplicitThis": true,
 		"noImplicitAny": true,
 		"strictNullChecks": true,
-		"suppressImplicitAnyIndexErrors": true,
 		"noUnusedLocals": true,
 		"skipLibCheck": true,
 		"experimentalDecorators": true
 	},
-	"exclude": ["node_modules", "build", "scripts", "acceptance-tests", "webpack", "jest", "src/setupTests.ts"]
+	"include": ["src"],
+	"exclude": ["jest.config.js", "node_modules", "build", "scripts", "webpack", "jest"]
 }
